--- a/etc/i18n/messages_en.properties
+++ b/etc/i18n/messages_en.properties
@@ -799,6 +799,9 @@ camera_num_preset_btns=Number of camera preset buttons.
 camera_preset_panel_columns=Desired number of columns in the preset selection grid in the camera preset control panel.
 camera_preset_panel_enable=Enable camera preset control panel.
 camera_preset_store_enable=Enable preset-store button in the camera preset control panel.
+camera_ptz_axis_comport=Device serial port number to use for serial PTZ ops (e.g. reset, wiper).
+camera_ptz_axis_reset=Byte sequence for a camera reset (case-insensitive, no delimiters, e.g. "ff01000f000010").
+camera_ptz_axis_wipe=Byte sequence for a single-shot wiper op (case-insensitive, no delimiters, e.g. "ff01000900010b").
 camera_ptz_blind=Allow camera controls to be used even if the camera is not currently streaming to the IRIS client.
 camera_ptz_panel_enable=Enable pan/tilt/zoom control panel for cameras.
 camera_stream_controls_enable=Enable camera stream control panel (stop, play, etc.)
